# footsteps

./: CMakeLists.txt  effects.c  effects.h  footsteps.c
dat/: 0.aiff  1.aiff  10.aiff  11.aiff  12.aiff  13.aiff  14.aiff  15.aiff  2.aiff  3.aiff  4.aiff  5.aiff  6.aiff  7.aiff  8.aiff  9.aiff
